# sign

./: CMakeLists.txt
src/: CMakeLists.txt  bip32.c  config.h  ecc.c
tests/: CMakeLists.txt  tests_unit.c
